--- a/code_cluster_analysis.ipynb
+++ b/code_cluster_analysis.ipynb
@@ -12,6 +12,9 @@
     "import geopandas as gpd \n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from pyecharts.globals import CurrentConfig\n",
+    "\n",
+    "CurrentConfig.ONLINE_HOST=\"https://cdn.kesci.com/lib/pyecharts_assets/\"\n",
     "%matplotlib inline\n",
     "\n",
     "sf = gpd.read_file('./data_for_paper_final_version/Grids with hash rate fluc index(201806-201905)/Grids with hash rate fluc index(201806-201905).shp')\n",
